--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="https://img.icons8.com/dusk/452/developer.png" type="image/x-icon">
+  <link rel="stylesheet" href="../styles/main.css">
   <title>Desafio Estágio</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
   <div>
     <div>
       <button id="more-button" onclick="test()">More</button>
-      <footer>Created by <a href=""></a></footer>
+      <footer>Created by <a href="https://www.linkedin.com/in/vitorfigueiredopb/">Vitor Figueiredo</a> ;)</footer>
     </div>
   </div>
 
