--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,6 @@
   <div>
     <div>
       <div class="content">
-        
         <table id="table">
           <tr class="columns">
             <td>Foto</td>
@@ -26,20 +25,16 @@
           </tr>
         </table>
       </div>
-
     </div>
-    
+
   <div>
     <div>
-      <button id="more-button" onclick="test()">More</button>
+      <button id="more-button" onclick="more()">More</button>
       <footer>Created by <a href="https://www.linkedin.com/in/vitorfigueiredopb/">Vitor Figueiredo</a> ;)</footer>
     </div>
   </div>
-
 </div>
-
 </body>
-
 
 <script src="../scripts/main.js"></script>
 </html>
